--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta property="og:image" href="./checkersThumbnail.jpg">
+    <meta name="twitter:card" href="./checkersThumbnail.jpg">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC:wght@900&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
     <link rel="icon shortcut" type="image/png" href="./favicon.png"/>
