changed format of thumbnail from jpg to png

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta property="og:image" content="%PUBLIC_URL%/checkersThumbnail.jpg">
-    <meta name="twitter:card" content="%PUBLIC_URL%/checkersThumbnail.jpg">
+    <meta property="og:image" content="%PUBLIC_URL%/checkersThumbnail.png">
+    <meta name="twitter:card" content="%PUBLIC_URL%/checkersThumbnail.png">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC:wght@900&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
     <link rel="icon shortcut" type="image/png" href="./favicon.png"/>
