--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC:wght@900&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
     <link rel="icon shortcut" type="image/png" href="./favicon.png"/>
+    <script src="DragDropTouch.js"></script>
     <title>Checkers</title>
   </head>
   <body>
